--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -74,6 +74,7 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="MovingForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MovingForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MovingRight",Scale=1.000000,Key=D)
